--- a/index.html
+++ b/index.html
@@ -5,44 +5,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sara Hussain - Personal Page</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        header {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .photo-container {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+        .profile-photo {
+            border-radius: 50%;
+        }
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+        section {
+            flex: 1 1 45%; /* Adjusts to take up about 45% of the row */
+            margin: 10px;
+            background: white;
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            margin-top: 0;
+        }
+        @media (max-width: 768px) {
+            section {
+                flex: 1 1 100%; /* Stacks sections on smaller screens */
+            }
+        }
+    </style>
 </head>
 <body>
     <header>
         <h1>Sara Hussain</h1>
-        <p><a href="mailto:your-email@lewis.edu">saranhussain@lewisu.edu</a></p>
+        <p><a href="mailto:saranhussain@lewis.edu">saranhussain@lewis.edu</a></p>
         <p>Discord: saraaa_.006</p>
     </header>
     
     <div class="photo-container">
-        <img src="me.png" alt="Sara Hussain" style="width:200px;"class="profile-photo"> 
-       
+        <img src="me.png" alt="Sara Hussain" style="width:200px;" class="profile-photo"> 
     </div>
 
-    <section>
-        <h2>Introduction</h2>
-        <p>I am a freshman majoring in cybersecurity. I come from a family of 5 and was born in Illinois .</p>
-    </section>
+    <div class="container">
+        <section>
+            <h2>Introduction</h2>
+            <p>I am a freshman majoring in cybersecurity. I come from a family of 5 and was born in Illinois.</p>
+        </section>
 
-    <section>
-        <h2>What I Hope to Learn in this Course</h2>
-        <ul>
-            <li>I hope to learn multiple programming languages.</li>
-            <li>I hope to learn more about Artificial Intelligence and it's uses.</li>
-            <li>I hope to fully understand Abstraction</li>
-        </ul>
-    </section>
+        <section>
+            <h2>What I Hope to Learn in this Course</h2>
+            <ul>
+                <li>I hope to learn multiple programming languages.</li>
+                <li>I hope to learn more about Artificial Intelligence and its uses.</li>
+                <li>I hope to fully understand Abstraction.</li>
+            </ul>
+        </section>
 
-    <section>
-        <h2>My Favorite Hobby / Activity</h2>
-        <ul>
-            <li>I like to cook and bake in my spare time<a href="hhttps://cooking.nytimes.com/68861692-nyt-cooking/1685992-best-fall-recipes">Learn more</a></li>
-            <li>I like to travel and experience different cultures, foods, fashion, etc. <a href="https://www.harpersbazaar.com/culture/travel-dining/g7171/most-beautiful-places-in-the-world/">Learn more</a></li>
-        </ul>
-    </section>
+        <section>
+            <h2>My Favorite Hobby / Activity</h2>
+            <ul>
+                <li>I like to cook and bake in my spare time. <a href="https://cooking.nytimes.com/68861692-nyt-cooking/1685992-best-fall-recipes">Learn more</a></li>
+                <li>I like to travel and experience different cultures, foods, fashion, etc. <a href="https://www.harpersbazaar.com/culture/travel-dining/g7171/most-beautiful-places-in-the-world/">Learn more</a></li>
+            </ul>
+        </section>
 
-    <section>
-        <h2>Fun Fact</h2>
-        <p>I have been to 12 different U.S states.</p>
-    </section>
+        <section>
+            <h2>Fun Fact</h2>
+            <p>I have been to 12 different U.S states.</p>
+        </section>
+    </div>
 </body>
 </html>
