--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <header>
         <h1>Sara Hussain</h1>
         <p><a href="mailto:saranhussain@lewis.edu">saranhussain@lewis.edu</a></p>
-        <p>Discord: saraaa_.006</p>
+        <p>Discord: Sara-101</p>
     </header>
     
     <div class="photo-container">
