--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 </head>
 <body>
     <header>
-        <h1>Sara Hussain</h1>
+        <h1 id="name">Sara Hussain</h1>
         <p><a href="mailto:saranhussain@lewis.edu">saranhussain@lewis.edu</a></p>
-        <p>Discord: Sara-101</p>
+        <p>Discord: saraaa_.006</p>
     </header>
     
     <div class="photo-container">
@@ -87,6 +87,11 @@
     </div>
 
     <script>
+        // Change name color to green when clicked
+        document.getElementById('name').addEventListener('click', function() {
+            this.style.color = 'green';
+        });
+
         // Accordion functionality
         const accordions = document.getElementsByClassName("accordion");
         for (let i = 0; i < accordions.length; i++) {
